<resources>
    <!-- App Name -->
    <string name="app_name" translatable="false">School Quizz</string>

    <!-- Elements description -->
    <string name="menu_button_desc" translatable="false">Boton de menu del top bar</string>
    <string name="fab_desc" translatable="false">Boton de añadir preguntas</string>
    <string name="exit_button" translatable="false">Exit from the dialog\n</string>
    <string name="qr_code" translatable="false">Imagen con el codigo qr</string>
    <string name="launch_button" translatable="false">Boton para lanzar una pregunta a ser contestada</string>
    <string name="edit_button" translatable="false">Boton para editar una pregunta</string>
    <string name="card_type_icon" translatable="false">Icono de cada tipo de pregunta</string>

    <!-- Add dialog hint -->
    <string name="question_answer">Answer:</string>
    <string name="question_question">Question:</string>
    <string name="save_button">Save</string>

    <!-- Error messages -->
    <string name="questions_exists">"Question already exists"</string>

    <!-- Dialog launch question -->
    <string name="yes_aswers">Yes</string>
    <string name="no_aswers" translatable="false">No</string>
    <string name="delete_question_message"> Are you sure you want to delete this question? </string>
    <string name="positive_button_message">Confirm</string>
    <string name="negative_button_message">Cancel</string>
    <string name="activity_question_type_title">Select the type of question:</string>

    <!-- Question types -->
    <string name="yes_no_title">Yes/No</string>
    <string name="yes_no_desc">Simple type of questions with two types of answers</string>
    <string name="stars_title">Stars</string>
    <string name="stars_desc">Score type of questions to select a certain amount of stars</string>
    <string name="bar_title">Progressive Bar</string>
    <string name="bar_desc">Score type of questions to mark a point on a progression bar</string>
    <string name="other_title">Others</string>
    <string name="other_desc">Custom type of questions with three possible answers</string>

</resources>