<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:elevation="10dp"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/question_type_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:background="@android:color/transparent"
            android:contentDescription="@string/exit_button" />

        <ImageButton
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:contentDescription="@string/exit_button"
            android:src="@drawable/baseline_arrow_forward_24"
            android:tint="@color/design_default_color_primary"
            tools:ignore="UseAppTint" />

    </LinearLayout>

    <EditText
        android:id="@+id/question_question"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/question_question"
        android:inputType="text"
        android:autofillHints=""
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@android:color/holo_red_light" />

    <EditText
        android:id="@+id/question_answer1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/question_answer"
        android:inputType="text"
        android:autofillHints=""
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/question_answer2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/question_answer"
        android:inputType="text"
        android:autofillHints=""
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/question_answer3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/question_answer"
        android:inputType="text"
        android:autofillHints=""
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/save_button"
        android:textAlignment="center"
        android:textStyle="bold" />

</LinearLayout>
