<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginHorizontal="48dp"
    android:layout_marginVertical="24dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:elevation="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="24dp" >

            <ImageView
                android:id="@+id/question_type_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_gravity="start"
                android:background="@android:color/transparent"
                android:contentDescription="@string/exit_button" />

            <TextView
                android:id="@+id/title_question"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="20sp"
                android:ellipsize="end"
                android:maxLines="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center|bottom" >

            <ImageButton
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:src="@drawable/baseline_delete_24"
                android:background="@android:color/transparent"
                android:contentDescription="@string/edit_button" />

            <ImageButton
                android:id="@+id/launch_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:src="@drawable/baseline_rocket_launch_24"
                android:background="@android:color/transparent"
                android:contentDescription="@string/launch_button"
                android:layout_marginHorizontal="60dp"
                android:layout_marginBottom="8dp" />

            <ImageButton
                android:id="@+id/edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:src="@drawable/baseline_edit_24"
                android:background="@android:color/transparent"
                android:contentDescription="@string/edit_button" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
